only show route in header in development mode

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -19,7 +19,9 @@
       {{/each}}
     </ul>
   </nav>
-  <span class='route__info'>Route: {{ route }}</span>
+  {{#if development}}
+    <span class='route__info'>Route: {{ route }}</span>
+  {{/if}}
 </header>
 
 <script>
