add med form closes once submitted

--- a/src/components/add-med-form.html
+++ b/src/components/add-med-form.html
@@ -74,6 +74,7 @@
           remaining: Math.floor(store.value / daily.value),
         }
 
+        this.set({ addMedOn: false })
         this.fire('addMed', { med })
 
         return false
